k8s/initial-setup/05-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/issuer: ptcert-prod
  name: pt-binance-01
  namespace: pt-binance-01
  labels:
    app: profit-trailer
    exchange: binance  
spec:
  rules:
  - host: pt-binance-01.lucascga.com
    http:
      paths:
      - backend:
          service:
            name: ingress-f7c862d252378d326eb442db
            port:
              number: 8081
        path: /
        pathType: ImplementationSpecific
  tls:
  - hosts:
    - pt-binance-01.lucascga.com
    secretName: tls-pt-binance-01-ingress
status:
  loadBalancer:
    ingress:
    - ip: 127.0.0.1
